# mk20dx-pac

./: .gitattributes  .gitignore  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RESEARCH_FINDINGS.md  STATUS.md  STRATEGY.md  pyproject.toml
mk20d5/: Cargo.toml  device.x
mk20d5/src/: adc0.rs  cmt.rs  dma.rs  dmamux.rs  ewm.rs  fmc.rs  ftfl.rs  ftfl_flash_config.rs  i2s0.rs  lib.rs  llwu.rs  mcg.rs  pdb0.rs  pit.rs  pmc.rs  porta.rs  portb.rs  portd.rs  rcm.rs  rfvbat.rs  sim.rs  smc.rs  spi0.rs  tsi0.rs  uart0.rs  uart1.rs  usbdcd.rs  wdog.rs
mk20d5/src/adc0/: cfg1.rs  clm0.rs  clm1.rs  clm2.rs  clm3.rs  clm4.rs  clmd.rs  clms.rs  clp0.rs  clp1.rs  clp2.rs  clp3.rs  clp4.rs  clpd.rs  clps.rs  mg.rs  r.rs
mk20d5/src/cmp0/: cr1.rs  muxcr.rs  scr.rs
mk20d5/src/cmt/: cgh1.rs  cgh2.rs  cgl2.rs  cmd1.rs  cmd2.rs  cmd3.rs  cmd4.rs  msc.rs  pps.rs
mk20d5/src/crc/: crc_crc.rs  crc_crcl.rs  crc_gpoly.rs  crc_gpolyh.rs  crc_gpolyhl.rs  crc_gpolyl.rs  crc_gpolyll.rs  crchu.rs  crclu.rs  ctrl.rs  gpolylu.rs
mk20d5/src/dma/: cdne.rs  ceei.rs  cint.rs  cr.rs  dchpri.rs  dma_tcd_citer_elinkyes.rs  dma_tcd_nbytes_mlno.rs  dma_tcd_nbytes_mloffno.rs  eei.rs  (+15 more)
mk20d7/: Cargo.toml  device.x
mk20d7/src/: adc0.rs  aips0.rs  aips1.rs  axbs.rs  can0.rs  cmt.rs  crc.rs  dac0.rs  dma.rs  dmamux.rs  ewm.rs  fb.rs  fmc.rs  ftfl.rs  ftfl_flash_config.rs  ftm0.rs  ftm1.rs  i2c0.rs  i2c1.rs  i2s0.rs  lib.rs  mcm.rs  pdb0.rs  pit.rs  pmc.rs  portd.rs  ptb.rs  ptc.rs  rcm.rs  rfvbat.rs  rtc.rs  sim.rs  smc.rs  spi0.rs  spi1.rs  system_control.rs  tsi0.rs  uart0.rs  uart2.rs  usb0.rs  (+1 more)
(+763 files in other folders)
